defconfig: add new defconfig for lineageos
Changes vs the stock defconfig:
CONFIG_MALI_EXYNOS_TRACE not set
Samsung root restrictions disabled
Allows selinux permissive
CONFIG_TIMA is not set

Change-Id: I8b95d3e80b4a2df15914bfb5ce4f0719397e47ef

--- a/arch/arm/configs/lineage_k3gxx_defconfig
+++ b/arch/arm/configs/lineage_k3gxx_defconfig
@@ -371,23 +371,9 @@ CONFIG_MACH_UNIVERSAL5422=y
 CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_KOR is not set
 # CONFIG_MACH_A7LTE is not set
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_TIMA_RKP=y
-# CONFIG_RKP_DBLMAP_PROT is not set
-# CONFIG_HYP_RKP is not set
-CONFIG_TIMA_RKP_30=y
 # CONFIG_KNOX_KAP is not set
-CONFIG_TIMA_RKP_L1_TABLES=y
-CONFIG_TIMA_RKP_L2_TABLES=y
-# CONFIG_TIMA_RKP_L2_GROUP is not set
-CONFIG_TIMA_RKP_LAZY_MMU=y
-CONFIG_TIMA_IOMMU_OPT=y
-CONFIG_TIMA_KMAP_OPT=y
-CONFIG_TIMA_DALVIKHEAP_OPT=y
-# CONFIG_TIMA_RKP_DEBUG is not set
-# CONFIG_TIMA_RKP_KDATA_PROT is not set
-# CONFIG_TIMA_RKP_RO_CRED is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 CONFIG_SEC_SMART_MGR_RUNQUEUE_AVG=y
@@ -1209,7 +1195,6 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 # CONFIG_SEC_DEV_JACK is not set
-CONFIG_TIMA_LOG=y
 # CONFIG_LED_COVER is not set
 # CONFIG_JACK_ADC_MORE_CTIME is not set
 # CONFIG_C2PORT is not set
@@ -2440,7 +2425,7 @@ CONFIG_ION_EXYNOS_OF=y
 # ARM GPU Configuration
 #
 # CONFIG_MALI_T6XX is not set
-CONFIG_MALI_EXYNOS_TRACE=y
+# CONFIG_MALI_EXYNOS_TRACE is not set
 CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_DEBUG_SHADER_SPLIT_FS is not set
 # CONFIG_MALI_PLATFORM_FAKE is not set
@@ -4075,7 +4060,6 @@ CONFIG_SEC_SELINUX=y
 # CONFIG_SECURITY_YAMA is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
