--- a/arch/arm/configs/lineage_k3gxx_defconfig
+++ b/arch/arm/configs/lineage_k3gxx_defconfig
@@ -173,8 +173,9 @@ CONFIG_COMPAT_BRK=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_DEFERRED_INITCALLS=y
-# CONFIG_PROFILING is not set
+CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
+# CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_JUMP_LABEL is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
@@ -1189,10 +1190,11 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-# CONFIG_UID_STAT is not set
+CONFIG_UID_STAT=y
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_SRAM is not set
 # CONFIG_SEC_DEV_JACK is not set
 # CONFIG_LED_COVER is not set
