--- a/arch/arm/configs/lineage_k3gxx_defconfig
+++ b/arch/arm/configs/lineage_k3gxx_defconfig
@@ -29,8 +29,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-LineageOS"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -173,9 +173,8 @@ CONFIG_COMPAT_BRK=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_DEFERRED_INITCALLS=y
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
-# CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_JUMP_LABEL is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
@@ -208,7 +207,13 @@ CONFIG_OLD_SIGACTION=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-# CONFIG_MODULES is not set
+CONFIG_MODULES=y
+# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_UNLOAD=y
+# CONFIG_MODULE_FORCE_UNLOAD is not set
+CONFIG_MODVERSIONS=y
+CONFIG_MODULE_SRCVERSION_ALL=y
+# CONFIG_MODULE_SIG is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -360,7 +365,7 @@ CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
 # CONFIG_ASV_MARGIN_TEST is not set
 # CONFIG_SKIP_HW_BREAKPOINT is not set
-# CONFIG_SAMSUNG_PRODUCT_SHIP is not set
+CONFIG_SAMSUNG_PRODUCT_SHIP=y
 
 #
 # Flattened Device Tree based board for EXYNOS SoCs
@@ -374,7 +379,21 @@ CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_MACH_A7LTE is not set
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_RKP is not set
+# CONFIG_RKP_DBLMAP_PROT is not set
+# CONFIG_HYP_RKP is not set
+# CONFIG_TIMA_RKP_30 is not set
 # CONFIG_KNOX_KAP is not set
+# CONFIG_TIMA_RKP_L1_TABLES is not set
+# CONFIG_TIMA_RKP_L2_TABLES is not set
+# CONFIG_TIMA_RKP_L2_GROUP is not set
+# CONFIG_TIMA_RKP_LAZY_MMU is not set
+# CONFIG_TIMA_IOMMU_OPT is not set
+# CONFIG_TIMA_KMAP_OPT is not set
+# CONFIG_TIMA_DALVIKHEAP_OPT is not set
+# CONFIG_TIMA_RKP_DEBUG is not set
+# CONFIG_TIMA_RKP_KDATA_PROT is not set
+# CONFIG_TIMA_RKP_RO_CRED is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 CONFIG_SEC_SMART_MGR_RUNQUEUE_AVG=y
@@ -523,6 +542,7 @@ CONFIG_TIGHT_PGDAT_BALANCE=y
 # CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 # CONFIG_ACCURATE_FREE_PAGES_CHECK is not set
 # CONFIG_OOM_SCAN_WA_PREVENT_WRONG_SEARCH is not set
+CONFIG_SDP_CACHE_CLEANUP=y
 CONFIG_MIN_DIRTY_THRESH_PAGES=7680
 CONFIG_MMAP_READAROUND_LIMIT=0
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -649,7 +669,6 @@ CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -699,7 +718,6 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-CONFIG_INET_DIAG_DESTROY=y
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
@@ -878,7 +896,7 @@ CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
-CONFIG_IP_NF_MATCH_RPFILTER=y
+# CONFIG_IP_NF_MATCH_RPFILTER is not set
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -914,7 +932,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_HL is not set
 # CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
 # CONFIG_IP6_NF_MATCH_MH is not set
-CONFIG_IP6_NF_MATCH_RPFILTER=y
+# CONFIG_IP6_NF_MATCH_RPFILTER is not set
 # CONFIG_IP6_NF_MATCH_RT is not set
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
@@ -1191,13 +1209,13 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_STAT=y
+# CONFIG_UID_STAT is not set
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
-CONFIG_UID_CPUTIME=y
 # CONFIG_SRAM is not set
 # CONFIG_SEC_DEV_JACK is not set
+CONFIG_TIMA_LOG=y
 # CONFIG_LED_COVER is not set
 # CONFIG_JACK_ADC_MORE_CTIME is not set
 # CONFIG_C2PORT is not set
@@ -3733,6 +3751,8 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
+CONFIG_SDCARD_FS_CI_SEARCH=y
+CONFIG_SDCARD_FS_XATTR=y
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
@@ -3806,6 +3826,9 @@ CONFIG_ECRYPT_FS=y
 # CONFIG_ECRYPT_FS_MESSAGING is not set
 CONFIG_WTL_ENCRYPTION_FILTER=y
 CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
+CONFIG_SDP=y
+# CONFIG_SDP_KEY_DUMP is not set
+CONFIG_DLP=y
 CONFIG_FORCE_DISABLE_FIPS=y
 # CONFIG_SCFS is not set
 # CONFIG_SYSTEM_COMPRESSED is not set
@@ -4031,6 +4054,9 @@ CONFIG_UNCOMPRESS_INCLUDE="mach/uncompress.h"
 # Samsung Rooting Restriction Feature
 #
 # CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 #
 # Security options
@@ -4048,7 +4074,7 @@ CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
-# CONFIG_SECURITY_SELINUX_DEVELOP is not set
+CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
@@ -4059,6 +4085,7 @@ CONFIG_SEC_SELINUX=y
 # CONFIG_SECURITY_YAMA is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
+CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
